Modifiche ultima ora

--- a/latex/esercitazioni/es_3.tex
+++ b/latex/esercitazioni/es_3.tex
@@ -146,7 +146,7 @@ e restituisce un'unica lista che contiene prima tutti gli elementi della prima l
 \mybox{15}{1.5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\item Scrivere una procedura {\tt Quadrati(As, a)} che calcola il quadrato di ogni elemento della lista {\tt As}.
+\item Scrivere una procedura {\tt Quadrati(As)} che calcola il quadrato di ogni elemento della lista {\tt As}.
 
 \mybox{15}{1.5}
 
