--- a/notebooks/Lab 10.ipynb
+++ b/notebooks/Lab 10.ipynb
@@ -7,7 +7,7 @@
     "# Tipi di dati e funzioni primitive di Python\n",
     "\n",
     "## Dati primitivi\n",
-    "Sino a questo punto del corso abbiamo usato essenzialmente tre tipi di dati primitivi:\n",
+    "Sino a questo punto del corso abbiamo usato essenzialmente quattro tipi di dati primitivi:\n",
     "\n",
     "* `int`: numeri interi\n",
     "* `float`: numeri \"con la virgola\" (più precisamente in \"virgola mobile\" con precisione numerica a 64 bit)\n",
@@ -16,7 +16,7 @@
     "\n",
     "Durante l'esecuzione di un programma è sempre possibile controllare il tipo di dato di un oggetto o di una variabile usando la funzione primitiva (o **builtin**) `type`.\n",
     "\n",
-    "**ESEMPIO 1:**"
+    "**ESEMPIO:**"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Attenza che una stringa è una semplice sequenza di caratteri:"
+    "Attenzione che una stringa è una semplice sequenza di caratteri:"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* È possibile estrarre delle sottosequenze con un'operazione di *slicing*. Se `s` è una stringa, l'espressione `s[start:end]` restituisce la sottostringa di `s` che inizia all'indice `start` e termina all'indice `end-1`."
+    "* È possibile estrarre delle sotto sequenze con un'operazione di *slicing*. Se `s` è una stringa, l'espressione `s[start:end]` restituisce la sotto stringa di `s` che inizia all'indice `start` e termina all'indice `end-1`."
    ]
   },
   {
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se il secondo indice viene ommesso, prende il valore di default `len(s)`."
+    "Se il secondo indice viene omesso, prende il valore di default `len(s)`."
    ]
   },
   {
@@ -364,7 +364,7 @@
    },
    "outputs": [],
    "source": [
-    "# Distingue le maiscule (case sensitive)\n",
+    "# Distingue le maiuscole (case sensitive)\n",
     "'v' in a"
    ]
   },
@@ -426,9 +426,9 @@
    "source": [
     "È possibile anche leggere un file di testo e memorizzare tutto il suo contenuto in un'unica stringa usando i due comandi:\n",
     "\n",
-    "* `filehandle = open(filename, mod, encoding)`: la funzione apre il file con nome \"filename\"  in modalità \"mod\" e restituisce un riferimento al file \"filehandlw\". Le modalità di apertura di un file sono: 'r'=lettura, 'w'=scrittura, 'a'=aggiunta. Il tipo di encoding serve per specificare il formato del file di testo; per file che contengono caratteri speciali (i.e., le lettere accentate italiane) si consiglia di usare l'enconding \"utf-8\". Si consiglia di leggere la [documentazione completa di open](https://docs.python.org/3/library/functions.html#open).\n",
+    "* `filehandle = open(filename, mod, encoding)`: la funzione apre il file con nome \"filename\"  in modalità \"mod\" e restituisce un riferimento al file \"filehandle\". Le modalità di apertura di un file sono: 'r'=lettura, 'w'=scrittura, 'a'=aggiunta. Il tipo di encoding serve per specificare il formato del file di testo; per file che contengono caratteri speciali (i.e., le lettere accentate italiane) si consiglia di usare encoding \"utf-8\". Si consiglia di leggere la [documentazione completa di open](https://docs.python.org/3/library/functions.html#open).\n",
     "\n",
-    "* `s = filehandle.read()`: legge tutto il file a cui fa riferimento `filehandle` e ne momorizza il contenuto nella stringa `s`.\n",
+    "* `s = filehandle.read()`: legge tutto il file a cui fa riferimento `filehandle` e ne memorizza il contenuto nella stringa `s`.\n",
     "\n",
     "**ESEMPIO:** Si controlli di avere il file \"canzone.txt\" nella directory corrente (usare il comando `ls`), e si eseguano i comandi seguenti:"
    ]
@@ -454,9 +454,29 @@
    },
    "outputs": [],
    "source": [
-    "print(s.split(' '))\n",
-    "#print(s.replace('\\n','').split(' '))\n",
-    "#print(s.lower().replace('\\n','').split(' '))"
+    "print(len(s.split(' ')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(s.replace('\\n','').split(' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(s.lower().replace('\\n','').split(' '))"
    ]
   },
   {
@@ -516,7 +536,7 @@
     "        print(head, end=' # ')\n",
     "        SinglePrint(tail)\n",
     "\n",
-    "SinglePrint(a)"
+    "SinglePrint('abcde')"
    ]
   },
   {
@@ -540,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per semplificare la scrittura di procedure che devono essere applicate a ciascun elemento di una sequenza si introduce la **SINTASSI** sequente:\n",
+    "Per semplificare la scrittura di procedure che devono essere applicate a ciascun elemento di una sequenza si introduce la **SINTASSI** seguente:\n",
     "\n",
     "```\n",
     "for <elemento> in <sequenza>:\n",
@@ -558,7 +578,7 @@
    },
    "outputs": [],
    "source": [
-    "for c in a:\n",
+    "for c in 'abcde':\n",
     "    print(c, end=' # ')"
    ]
   },
@@ -594,11 +614,11 @@
     "* `s.find(s1)`: restituisce l'indice della stringa `s` in cui ha trovato per la prima volta la stringa `s1`; altrimenti restituisce -1\n",
     "* `s.rfind(s1)`: come sopra, ma inizia dalla fine di `s` (la `r` sta per `reversed`)\n",
     "* `s.lower()`: converte tutte le lettere in minuscolo\n",
-    "* `s.upper()`: converte tutte le lettere in maiscolo\n",
-    "* `s.replace(old,new)`: sostituisce tutte le sottostringhe uguali a `old` in `s` con la stringa `new`\n",
+    "* `s.upper()`: converte tutte le lettere in maiuscolo\n",
+    "* `s.replace(old,new)`: sostituisce tutte le sotto stringhe uguali a `old` in `s` con la stringa `new`\n",
     "* `s.strip()`: rimuove tutti i caratteri blanks iniziali e finali dalla stringa `s`\n",
     "* `s.strip()`: rimuove tutti i caratteri blanks finali dalla stringa `s`\n",
-    "* `s.split(d)`: suddivide la stringa in sottostringhe usando il carattere `d` come separatore"
+    "* `s.split(d)`: suddivide la stringa in sotto stringhe usando il carattere `d` come separatore"
    ]
   },
   {
@@ -663,7 +683,7 @@
    },
    "outputs": [],
    "source": [
-    "for c in 'abcdefghijklmnopqrstuvwxyz':\n",
+    "for c in 'abcdefghijklmnopqrstuvwxyz'.upper():\n",
     "    print((c, ord(c)), end=', ')"
    ]
   },
@@ -889,7 +909,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NOTA:** Le stringhe e le tuble sono dei tipi i oggetto non modificabili, ovvero sono dei dati *read only*."
+    "**NOTA:** Le stringhe e le tuple sono dei tipi i oggetto non modificabili, ovvero sono dei dati *read only*."
    ]
   },
   {
@@ -1001,7 +1021,7 @@
     "U1 = [Techs, Ivys]\n",
     "U2 = [['MIT', 'Caltech'], ['Harvard','Yale','Penn']]\n",
     "print(U1 == U2)\n",
-    "print(id(U1) == id(U2)) # la funzione id() restituisce l'identificativo unico di un oggetto python"
+    "print(id(U1) == id(U2)) # la funzione id() restituisce l'identificativo unico di un oggetto Python"
    ]
   },
   {
@@ -1039,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ESERCIZIO 2:** (*obiettivo: intuire il vantaggio di poter avere anche oggi non mutabili*)\n",
+    "**ESERCIZIO 3:** (*obiettivo: intuire il vantaggio di poter avere anche oggi non mutabili*)\n",
     "\n",
     "Si scriva una funzione che prenda in input due **liste** e che rimuove dalla prima lista ogni elemento che compare nella seconda lista. La funzione non ritorna nulla, ma **modifica** la prima lista data in input. Si può usare il metodo `L.remove(e)` che rimuove dalla lista `L` il primo elemento uguale a `e`."
    ]
@@ -1153,13 +1173,13 @@
    "metadata": {},
    "source": [
     "## Dizionari\n",
-    "I dizionari sono una struttura dati molto utilizzati in python. Sono delle strutture dati che corrispondono a delle liste di coppie **(key, value)**. I dizionari sono degli oggetti **mutabili** come le liste, ma non sono una sequenza ordinata, e quindi non possono essere indicizzati con dei numeri interi.\n",
+    "I dizionari sono una struttura dati molto utilizzati in Python. Sono delle strutture dati che corrispondono a delle liste di coppie **(key, value)**. I dizionari sono degli oggetti **mutabili** come le liste, ma non sono una sequenza ordinata, e quindi non possono essere indicizzati con dei numeri interi.\n",
     "\n",
     "La **key** viene utilizzata come chiave per indicizzare un **value**. Per esempio:\n",
     "\n",
     "`Dict[\"hello\"] = \"ciao\"`\n",
     "\n",
-    "Abbiamo la chiave \"hello\" utilizzata per indicizzare l'elemento \"ciao\" nel dizionario Dict. Per semplicita', potete pensare ai dizionari a come dei vettori di elementi indicizzati da altri oggetti **immutabili**, come ad esempio delle stringhe.\n",
+    "Abbiamo la chiave \"hello\" utilizzata per indicizzare l'elemento \"ciao\" nel dizionario Dict. Per semplicità, potete pensare ai dizionari a come dei vettori di elementi indicizzati da altri oggetti **immutabili**, come ad esempio delle stringhe.\n",
     "\n",
     "**ESEMPIO:**"
    ]
@@ -1225,7 +1245,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ESERCIZIO 4:** Per ogni carattere (stringa di lunghezza 1) della canzone contenuta nel file \"canzone.txt\", contare il numero di volte che appare nel testo."
+    "**ESERCIZIO 4:** Per ogni carattere (stringa di lunghezza 1) della canzone contenuta nel file \"canzone.txt\", scrivere:\n",
+    "\n",
+    "1. una funzione `ContaCaratteri(c)` che conti il numero di volte che ciascun carattere appare nel testo e restituisce un dizionario dove si ha una \"chiave\" per ogni carattere e un \"valore\" pari al numero di volte che il carattere appare nella stringa. Rimuovere la punteggiatura, gli spazi vuoti, e i caratteri speciali. \n",
+    "\n",
+    "2. una funzione `CalcolaFrequenza(d)` che prende in input un dizionario con i conteggi dei caratteri, calcola la frequenza di ciascun carattere, e restituisce un dizionario dove si ha una \"chiave\" per ogni carattere e un \"valore\" pari alla frequenza con cui il carattere appare nel testo."
    ]
   },
   {
@@ -1236,27 +1260,28 @@
    },
    "outputs": [],
    "source": [
+    "def ContaCaratteri(s):\n",
+    "    # Costruttore di un dizionario vuoto\n",
+    "    D = {}\n",
+    "    # Ciclo su tutti caratteri della stringa\n",
+    "    for c in s:\n",
+    "        if c in D:\n",
+    "            D[c] += 1\n",
+    "        else:\n",
+    "            D[c] = 1\n",
+    "    return D\n",
+    "\n",
+    "def CalcolaFrequenza(D):\n",
+    "    F = {}\n",
+    "    # Da completare, esercizio\n",
+    "    return F\n",
+    "\n",
     "fh = open('./canzone.txt', 'r', encoding=\"utf-8\")\n",
     "s = fh.read()\n",
-    "\n",
-    "D = {}\n",
-    "for c in s:\n",
-    "    if c in D:\n",
-    "        D[c] += 1\n",
-    "    else:\n",
-    "        D[c] = 1\n",
-    "        \n",
-    "print(D)"
+    "for c in ',?\\n”“ ’':\n",
+    "    s = s.replace(c,'')\n",
+    "print(ContaCaratteri(s.replace(',','').replace('?','').lower()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
