--- a/notebooks_v3/Lab 10.v3.ipynb
+++ b/notebooks_v3/Lab 10.v3.ipynb
@@ -133,7 +133,18 @@
      "metadata": {},
      "source": [
       "## Le stringhe\n",
-      "Per rappresentare una sequenza di caratteri possiamo usare un oggetto di tipo **stringa**, ovvero un dato composto di tipo `str`:"
+      "Per rappresentare una sequenza di caratteri possiamo usare un oggetto di tipo **stringa**, ovvero un dato composto di tipo `str`.\n",
+      "\n",
+      "I **costruttori** per le stringhe sono:\n",
+      "\n",
+      "```\n",
+      "s1 = ''\n",
+      "s2 = \"\"\n",
+      "s3 = str()\n",
+      "s4 = 'ciao'\n",
+      "```\n",
+      "\n",
+      "Per esempio, possiamo scrivere:"
      ]
     },
     {
@@ -737,7 +748,17 @@
      "metadata": {},
      "source": [
       "## Le tuple\n",
-      "Le tuple, come le stringhe, sono delle sequenze *non modificabili* di elementi. A differenza delle stringhe non abbiamo nessun vincolo particolare sul **tipo** degli elementi che appaiono nella sequenza, e possono anche essere tutti diversi tra loro."
+      "Le tuple, come le stringhe, sono delle sequenze *non modificabili* di elementi. A differenza delle stringhe non abbiamo nessun vincolo particolare sul **tipo** degli elementi che appaiono nella sequenza, e possono anche essere tutti diversi tra loro.\n",
+      "\n",
+      "I metodi **costruttori** per le tuple sono:\n",
+      "\n",
+      "```\n",
+      "t1 = ()\n",
+      "t2 = tuple()\n",
+      "t3 = (1, 2.3, 'cool!', False)\n",
+      "```\n",
+      "\n",
+      "I **selettori** principali sono l'operatore di indicizzazione e quelle di slicing."
      ]
     },
     {
@@ -942,7 +963,17 @@
      "metadata": {},
      "source": [
       "## Le liste\n",
-      "Le **liste** di Python sono delle sequenze di elementi come le tuple, ma a differenza di quest'ultime, possono essere modificate. La sintassi per gestire le liste \u00e8 simile a quelle delle tuple: la differenza principale consiste nell'usare le parentesi tonde invece delle quadre:"
+      "Le **liste** di Python sono delle sequenze di elementi come le tuple, ma a differenza di quest'ultime, possono essere modificate. La sintassi per gestire le liste \u00e8 simile a quelle delle tuple: la differenza principale consiste nell'usare le parentesi tonde invece delle quadre.\n",
+      "\n",
+      "I metodi **costruttori** per le liste sono:\n",
+      "\n",
+      "```\n",
+      "L1 = []\n",
+      "L2 = list()\n",
+      "L3 = [1, 2.3, 'cool!', False]\n",
+      "```\n",
+      "\n",
+      "Il **selettore** di una lista \u00e8 l'operatore di indicizzazione che restituisce l'$i$-esimo elemento della lista. Si vedano gli esempi sotto."
      ]
     },
     {
@@ -1198,13 +1229,25 @@
      "metadata": {},
      "source": [
       "## Dizionari\n",
-      "I dizionari sono una struttura dati molto utilizzati in Python. Sono delle strutture dati che corrispondono a delle liste di coppie **(key, value)**. I dizionari sono degli oggetti **mutabili** come le liste, ma non sono una sequenza ordinata, e quindi non possono essere indicizzati con dei numeri interi.\n",
+      "I dizionari sono una struttura dati molto utilizzati in Python. Sono delle strutture dati che corrispondono a delle liste di coppie **(key, value)**. I dizionari sono degli oggetti **mutabili** come le liste, ma non sono una sequenza ordinata, e quindi non possono essere indicizzati con dei numeri interi, ma sono indicizzati utilizzando le loro chiavi.\n",
+      "\n",
+      "Per **costruire** un dizionario vuoto abbiamo due possibilit\u00e0 equivalenti (che corrispondono alla chiamata allo stesso **costruttore**):\n",
+      "\n",
+      "```\n",
+      "D1 = {}\n",
+      "D2 = dict()\n",
+      "```\n",
+      "Possiamo anche **costruire** un dizionario con dei valore iniziali:\n",
+      "\n",
+      "```\n",
+      "Dict = {'a': 0, 'b': 1, 'c': 2}\n",
+      "```\n",
       "\n",
       "La **key** viene utilizzata come chiave per indicizzare un **value**. Per esempio:\n",
       "\n",
       "`Dict[\"hello\"] = \"ciao\"`\n",
       "\n",
-      "Abbiamo la chiave \"hello\" utilizzata per indicizzare l'elemento \"ciao\" nel dizionario Dict. Per semplicit\u00e0, potete pensare ai dizionari a come dei vettori di elementi indicizzati da altri oggetti **immutabili**, come ad esempio delle stringhe.\n",
+      "Abbiamo la chiave `hello` utilizzata per indicizzare l'elemento `ciao` nel dizionario `Dict`. Per semplicit\u00e0, potete pensare ai dizionari a come dei vettori di elementi indicizzati da altri oggetti **immutabili**, come ad esempio delle stringhe o delle tuple.\n",
       "\n",
       "**ESEMPIO:**"
      ]
@@ -1257,8 +1300,8 @@
       "I seguenti metodi sono molto utili per usare i dizionari:\n",
       "\n",
       "* `len(d)`: restituisce il numero di elementi nel dizionario `d`\n",
-      "* `d.keys()`: restituisce una vista delle chiavi del dizionario `d`\n",
-      "* `d.values()`: restituisce una vista dei valori del dizionario `d`\n",
+      "* `d.keys()`: restituisce una lista (vista) delle chiavi del dizionario `d`\n",
+      "* `d.values()`: restituisce una lista (vista) dei valori del dizionario `d`\n",
       "* `key in d`: restituisce `True` se la chiave `key` \u00e8 nel dizionario `d`\n",
       "* `d.get(key, value)`: restituisce `d[key]` se `key` \u00e8 in `d`, altrimenti restituisce il valore `value`\n",
       "* `d[key] = value`: associa il valore `value` alla chiave `key` nel dizionario `d`\n",
@@ -1272,20 +1315,26 @@
      "source": [
       "**ESERCIZIO 4:** Per ogni carattere (stringa di lunghezza 1) della canzone contenuta nel file \"canzone.txt\", scrivere:\n",
       "\n",
-      "1. una funzione `ContaCaratteri(c)` che conti il numero di volte che ciascun carattere appare nel testo e restituisce un dizionario dove si ha una \"chiave\" per ogni carattere e un \"valore\" pari al numero di volte che il carattere appare nella stringa. Rimuovere la punteggiatura, gli spazi vuoti, e i caratteri speciali. \n",
+      "1. Una funzione `PulisciTesto(s, blanks)` che restituisce una stringa in cui da `s` sono stati rimossi tutti gli elementi in `blanks`.\n",
       "\n",
-      "2. una funzione `CalcolaFrequenza(d)` che prende in input un dizionario con i conteggi dei caratteri, calcola la frequenza di ciascun carattere, e restituisce un dizionario dove si ha una \"chiave\" per ogni carattere e un \"valore\" pari alla frequenza con cui il carattere appare nel testo."
+      "2. una funzione `ContaCaratteri(c)` che conti il numero di volte che ciascun carattere appare nel testo e restituisce un dizionario dove si ha una \"chiave\" per ogni carattere e un \"valore\" pari al numero di volte che il carattere appare nella stringa. Rimuovere la punteggiatura, gli spazi vuoti, e i caratteri speciali. \n",
+      "\n",
+      "3. una funzione `CalcolaFrequenza(d)` che prende in input un dizionario con i conteggi dei caratteri, calcola la frequenza di ciascun carattere, e restituisce un dizionario dove si ha una \"chiave\" per ogni carattere e un \"valore\" pari alla frequenza con cui il carattere appare nel testo."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def ContaCaratteri(s):\n",
-      "    # Costruttore di un dizionario vuoto\n",
-      "    D = {}\n",
-      "    # Ciclo su tutti caratteri della stringa\n",
-      "    for c in s:\n",
+      "def PulisciTesto(s, blanks):\n",
+      "    r = s[:]\n",
+      "    for c in blanks:\n",
+      "        r = r.replace(c,'')\n",
+      "    return r\n",
+      "\n",
+      "def ContaCaratteri(s):    \n",
+      "    D = {}          # Costruttore di un dizionario vuoto\n",
+      "    for c in s:     # Ciclo su tutti caratteri della stringa\n",
       "        if c in D:\n",
       "            D[c] += 1\n",
       "        else:\n",
@@ -1294,15 +1343,24 @@
       "\n",
       "def CalcolaFrequenza(D):\n",
       "    F = {}\n",
-      "    # Da completare, esercizio\n",
+      "    # TODO: completare il dizionario F con le frequenze\n",
       "    return F\n",
       "\n",
       "fh = open('./canzone.txt', 'r', encoding=\"utf-8\")\n",
       "s = fh.read()\n",
-      "for c in ',?\\n\u201d\u201c \u2019':\n",
-      "    s = s.replace(c,'')\n",
+      "# Pulisce la stringa letta\n",
+      "s = PulisciTesto(s, ',?\\n\u201d\u201c \u2019')\n",
       "print(ContaCaratteri(s.replace(',','').replace('?','').lower()))"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [],
