Errori nell'esercitazione 6

--- a/latex/esercitazioni/es_6.tex
+++ b/latex/esercitazioni/es_6.tex
@@ -147,7 +147,7 @@ i punti seguenti:
 \item Modificare la funzione {\tt DrawMatrix} vista per i frattali in modo tale che dia una rappresentazione grafica di una soluzione: il nero rappresenta la posizione di una regina, il bianco rappresenta una posizione vuota.
 \item Scrivere una funzione, che dato un posizionamento delle regine rappresentato con la struttura dati scelta,
 controlli se il posizionamento è ammissibile, ovvero nessuna regina ne tiene un'altra sotto scacco.
-\item Scrivere una funzione che prende in input un numero interno $n>4$ e restituisce in output una soluzione al problema
+\item Scrivere una funzione che prende in input un numero interno $n \geq 4$ e restituisce in output una soluzione al problema
 delle $n$-regine.
 \item Qual'è la complessità dell'algoritmo che avete usato per implementare la vostra soluzione?
 \end{enumerate}
