Orrori di ortografia

--- a/latex/esercitazioni/es_6.tex
+++ b/latex/esercitazioni/es_6.tex
@@ -87,7 +87,7 @@ showstringspaces=false            %
 un insieme di oggetti, ovvero la lista non contiene nessuna coppia di elementi uguali. Due elementi 'x' e 'y'
 sono considerati uguali, se il predicato {\tt P(x, y)} vale {\tt True}.
 
-Qual'è la complessità dell'algoritmo che avete usato per implementare questa funzione?
+Qual è la complessità dell'algoritmo che avete usato per implementare questa funzione?
 
 \mybox{15}{2.75}
 
@@ -95,7 +95,7 @@ Qual'è la complessità dell'algoritmo che avete usato per implementare questa f
 \item Scrivere una funzione {\tt InsertAt(As, value, i)} che inserisce nella lista {\tt As} l'elemento {\tt value}
 in posizione {\tt i}.
 
-Qual'è la complessità dell'algoritmo che avete usato per implementare questa funzione?
+Qual è la complessità dell'algoritmo che avete usato per implementare questa funzione?
 
 \mybox{15}{2.75}
 
@@ -106,7 +106,7 @@ rispettando le seguenti regole: se l'elemento è già presente nella lista non v
 altrimenti l'elemento viene aggiunto tra due valori 'x' e 'y' di {\tt As} in modo tale che 
 valga la relazione $x < z < y$, o più in generale {\tt Cmp(x,z) == True} e {\tt Cmp(z,y) == True}.
 
-Qual'è la complessità dell'algoritmo che avete usato per implementare questa funzione?
+Qual è la complessità dell'algoritmo che avete usato per implementare questa funzione?
 
 \mybox{15}{2.75}
 
@@ -149,7 +149,7 @@ i punti seguenti:
 controlli se il posizionamento è ammissibile, ovvero nessuna regina ne tiene un'altra sotto scacco.
 \item Scrivere una funzione che prende in input un numero interno $n \geq 4$ e restituisce in output una soluzione al problema
 delle $n$-regine.
-\item Qual'è la complessità dell'algoritmo che avete usato per implementare la vostra soluzione?
+\item Qual è la complessità dell'algoritmo che avete usato per implementare la vostra soluzione?
 \end{enumerate}
 
 Per la {\bf CHALLENGE}, potete mandare l'implementazione in python per email (facoltativo).
