--- a/notebooks/Lab 1.ipynb
+++ b/notebooks/Lab 1.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uno dei vantaggi della notazione **prefix** è che rende sempre chiaro qual'è l'operatore/procedure che deve essere svolta, applicandola a quali dati: `add` è il nome dell'operatore, mentre tra parentesi sono dati i due dati numerici a cui deve essere applicata l'operazione."
+    "Uno dei vantaggi della notazione **prefix** è che rende sempre chiaro qual è l'operatore/procedure che deve essere svolta, applicandola a quali dati: `add` è il nome dell'operatore, mentre tra parentesi sono dati i due dati numerici a cui deve essere applicata l'operazione."
    ]
   },
   {
@@ -739,7 +739,7 @@
    "metadata": {},
    "source": [
     "## Esercizi\n",
-    "**ESERCIZIO 1.1**: Viene data sotto una serie di espressioni. Qual'è il risultato dell'interprete in risposta a ciascuna espressione? Si assuma che la sequenza viene valutata nell'ordine in cui vi viene presentata.\n",
+    "**ESERCIZIO 1.1**: Viene data sotto una serie di espressioni. Qual è il risultato dell'interprete in risposta a ciascuna espressione? Si assuma che la sequenza viene valutata nell'ordine in cui vi viene presentata.\n",
     "\n",
     "```\n",
     "10\n",
