--- a/notebooks/Lab 5.ipynb
+++ b/notebooks/Lab 5.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A partire da ogni punto del dominio possiamo calcolare ogni valore di $y=f(x)$ per ogni $x\\in D$. Dobbiamo prima definire qual'è la funzione di cui vogliamo visualizzare il grafico. Consideriamo prima la funzione:\n",
+    "A partire da ogni punto del dominio possiamo calcolare ogni valore di $y=f(x)$ per ogni $x\\in D$. Dobbiamo prima definire qual è la funzione di cui vogliamo visualizzare il grafico. Consideriamo prima la funzione:\n",
     "\n",
     "$$f(x) = x^2$$\n",
     "\n",
