--- a/notebooks_v3/Lab 1.v3.ipynb
+++ b/notebooks_v3/Lab 1.v3.ipynb
@@ -158,7 +158,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Uno dei vantaggi della notazione **prefix** \u00e8 che rende sempre chiaro qual'\u00e8 l'operatore/procedure che deve essere svolta, applicandola a quali dati: `add` \u00e8 il nome dell'operatore, mentre tra parentesi sono dati i due dati numerici a cui deve essere applicata l'operazione."
+      "Uno dei vantaggi della notazione **prefix** \u00e8 che rende sempre chiaro qual \u00e8 l'operatore/procedure che deve essere svolta, applicandola a quali dati: `add` \u00e8 il nome dell'operatore, mentre tra parentesi sono dati i due dati numerici a cui deve essere applicata l'operazione."
      ]
     },
     {
@@ -763,7 +763,7 @@
      "metadata": {},
      "source": [
       "## Esercizi\n",
-      "**ESERCIZIO 1.1**: Viene data sotto una serie di espressioni. Qual'\u00e8 il risultato dell'interprete in risposta a ciascuna espressione? Si assuma che la sequenza viene valutata nell'ordine in cui vi viene presentata.\n",
+      "**ESERCIZIO 1.1**: Viene data sotto una serie di espressioni. Qual \u00e8 il risultato dell'interprete in risposta a ciascuna espressione? Si assuma che la sequenza viene valutata nell'ordine in cui vi viene presentata.\n",
       "\n",
       "```\n",
       "10\n",
