--- a/notebooks_v3/Lab 5.v3.ipynb
+++ b/notebooks_v3/Lab 5.v3.ipynb
@@ -111,7 +111,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A partire da ogni punto del dominio possiamo calcolare ogni valore di $y=f(x)$ per ogni $x\\in D$. Dobbiamo prima definire qual'\u00e8 la funzione di cui vogliamo visualizzare il grafico. Consideriamo prima la funzione:\n",
+      "A partire da ogni punto del dominio possiamo calcolare ogni valore di $y=f(x)$ per ogni $x\\in D$. Dobbiamo prima definire qual \u00e8 la funzione di cui vogliamo visualizzare il grafico. Consideriamo prima la funzione:\n",
       "\n",
       "$$f(x) = x^2$$\n",
       "\n",
